--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,13 +11,14 @@ html, body {
   width: 100%;
   min-height: 100vh;
   overflow-x: hidden;
+  background-color: #1a1a1a; 
+  overscroll-behavior: none;
 }
 
 body {
-  min-height: 100vh;
+  min-height: 100dvh;
 
   background: url('/assets/bg-i-phone.png') center center / cover no-repeat fixed;
-  min-height: 100vh;
   margin: 0;
 
 
