--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,15 +9,13 @@
 
 html, body {
   width: 100%;
-  min-height: 100vh;
+  height: 100%;
   overflow-x: hidden;
   background-color: #1a1a1a; 
   overscroll-behavior: none;
 }
 
 body {
-  min-height: 100dvh;
-
   background: url('/assets/bg-i-phone.png') center center / cover no-repeat fixed;
   margin: 0;
 
