--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,7 +16,7 @@ html, body {
 }
 
 body {
-  background: url('/assets/bg-i-phone1.png') center center / cover no-repeat fixed;
+  background: url('/assets/bg-i-phone1.png') center center / max(100vw, 62vh) no-repeat fixed;
   margin: 0;
 
 
