--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,14 +9,14 @@
 
 html, body {
   width: 100%;
-  height: 105%;
+  height: 100%;
   overflow-x: hidden;
-  background-color: #1a1a1a; 
+  background-color: red; 
   overscroll-behavior: none;
 }
 
 body {
-  background: url('/assets/bg-i-phone1.png') center center / max(100vw, 65vh) no-repeat fixed;
+  background: url('/assets/bg-i-phone1.png') center center / max(100vw, 70vh) no-repeat;
   margin: 0;
 
 
