--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,13 +9,15 @@
 
 html {
   width: 100%;
-  height: 110%;
-  overflow-x: hidden;
-  overscroll-behavior: none;
+  height: 100%;
+  //overflow-x: hidden;
+  //overscroll-behavior: none;
 }
 
 body {
-  height: 90%;
+  margin: 0;
+  //height: 100%;
+  //overscroll-behavior: none;
 }
 
 html {
